修复上传功能